# muldia

./: CMakeLists.txt  README.md
.mindnode/muldia.mindnode/: contents.xml  viewState.plist
include/: name.h
include/core/: dtype.h  shape.h  types.h
include/tensor/: 3  _alloc.h  _c_ctn.h  _ctn.h  _exten.h  _inest.h  _inst.h  _iter.h  _op.h  _shape.h  _tein.h  _tensor.h  _tenus.h  _tesor1.h  name.h
muldia/include/: tensor.h
muldia/include/core/: dtype.h  shape.h
muldia/include/tensor/: _alloc.h  _c.h  _c_ctn.h  _child.h  _child_impl.h  _concept.h  _ctn.h  _dty.h  _inest.h  _init.h  _iter.h  _op.h  _open.h  _parent.h  _parent_impl.h  _shape.h  _tenit.h  _tensor.h  _tensor_allc_impl.h  _tensor_con_impl.h  _tensor_des_impl.h  _tensor_dty_impl.h  _tensor_etc_impl.h  _tensor_iter_impl.h  _tensor_op_impl.h  _tensor_shp_impl.h  _tensor_tein_impl.h  tensor.h
muldia/src/: name.cpp
muldia/src/_tensor/helper/: _bro.h  _broptr.h  _op.h  name.h
muldia/src/err/: name.h
muldia/src/err/_tensor/: autocast.h  operation.h
muldia/src/err/child/: have.h
muldia/src/err/shape/: autocast.h  range.h  shape.h  size.h
src/: name.cpp  shape.cpp
src/err/shape/: range.h
test/: CMakeLists.txt  test.cpp  test_tensor_init.cpp
test/_tensor/concept/: CMakeLists.txt  concept.cpp
test/_tensor/construct/: CMakeLists.txt  default.cpp
test/_tensor/inheri/: CMakeLists.txt  inheri.cpp
test/_tensor/operator/: CMakeLists.txt  add.cpp  add2.cpp  subscript.cpp
